[package]
name    = "convis"
version = "0.0.1"
edition = "2018"

[dependencies]
bytes        = "1.1.0"
env_logger   = "0.9.0"
flate2       = "1.0.21"
gumdrop      = "0.8.0"
hostname     = "0.3.1"
libc         = "0.2.101"
log          = "0.4.14"
parking_lot  = "0.11.2"
procfs       = "0.10.1"
serde_json   = "1.0.67"

[dependencies.anyhow]
version  = "1.0.43"
features = ["backtrace"]

[dependencies.aya]
version  = "0.10.3"
features = ["async_tokio"]

[dependencies.shiplift]
git = "https://github.com/softprops/shiplift.git"
features = ["unix-socket"]
default-features = false

[dependencies.bytemuck]
version  = "1.7.2"
features = ["derive"]

[dependencies.reqwest]
version  = "0.11.4"
features = ["gzip", "json", "rustls-tls"]
default-features = false

[dependencies.serde]
version  = "1.0.130"
features = ["derive", "rc"]

[dependencies.tokio]
version  = "1.10.1"
features = ["full"]
